# marc-iiif

./: .gitignore  README.md  manifest.py  pyproject.toml  requirements.txt  sample.env
src/manifester/: CSVRow.py  alma_record.py  aspace_client.py  aspace_lookup.py  citation.py  config.py  errors.py  fits.py  handle-template.txt  image.py  image_file.py  manifest.py  manifest_builder.py  manifester.py  sample.env  source_record.py  ssh_connection.py  view-template.html  xlsx_reader.py  xlsx_row.py
test/: image_test.py
