[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "manifester"
version = "0.0.1"
dependencies = [
    'certifi ~= 2024.7.4',
    'charset-normalizer ~= 2.0.12',
    'idna ~= 3.7',
    'requests ~= 2.27.1',
    'urllib3 ~= 1.26.9',
    'pymarc ~= 5.2.2',
    'paramiko ~= 3.5.0',
    'pytest ~= 8.3.4',
    'python-dotenv ~= 1.0.1',
    'openpyxl ~= 3.1.5'
]
requires-python = ">= 3.9"

[project.scripts]
manifester = "manifester.manifester:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.txt", ".env"]